--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^1.19.2",
     "supertest": "^4.0.2",
     "uuid": "^3.3.3",
